test/expressions/noinit/namingConflict.good
namingConflict.chpl:1: syntax error: syntax error near 'noinit'
namingConflict.chpl:2: syntax error: syntax error near 'noinit'
